# library-prep-pipeline

./: .env.example  .gitignore  LICENSE  README.md  go.mod  go.sum  library_pipeline.py  pyproject.toml  run_conformers_chunked.py
chemistry/: environment.yml
chemistry_runner/: __init__.py  __main__.py  limits.py  profile.py  provenance.py  qualification.py  safe_input.py  stages.py
cmd/agent/: main.go
cmd/api/: main.go
cmd/gc/: main.go
cmd/sandboxd/: main.go
cmd/scheduler/: main.go
cmd/storageinit/: main.go
deploy/ansible/: ansible.cfg  requirements.yml  site.yml
deploy/control/: Caddyfile  alerts.yml  backup-init.sh  backup.sh  blackbox.yml  compose.yml  init-databases.sh  migrate.sh  nats.conf  prometheus.yml
deploy/pgbackrest/: pgbackrest.conf
deploy/security/: chemistry-apparmor.profile  chemistry-seccomp.json
deploy/storage/: compose.yml  filer.toml  s3.json
deploy/systemd/: library-prep-backup.service  library-prep-backup.timer  library-prep-control.service  library-prep-sandboxd.service  library-prep-storage.service  library-prep-worker.service
deploy/worker/: compose.yml
docker/: agent.Dockerfile  chemistry.Dockerfile  go.Dockerfile  postgres.Dockerfile  web.Dockerfile
docs/: ARCHITECTURE.md  DEPLOYMENT.md  OPERATIONS.md  RELEASE_GATES.md  RELEASE_MATRIX.md  SECURITY.md
internal/agent/: api_client.go  disk_linux.go  disk_other.go  worker.go  worker_test.go
internal/api/: auth.go  (+1 more)
migrations/: 000001_platform.down.sql  000001_platform.up.sql
tests/: test_safe_input.py
web/: next.config.ts  package.json  pnpm-lock.yaml
(+54 files in other folders)
