[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "library-prep-chemistry-runner"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "dimorphite-dl==2.0.2",
  "numpy==2.2.6",
  "pandas==2.3.2",
  "pyarrow==21.0.0",
  "rdkit==2025.3.5",
]

[project.optional-dependencies]
test = ["pytest==8.4.2"]

[tool.setuptools.packages.find]
include = ["chemistry_runner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
